update swagger add delete route in routes
